--- a/spring-table-affermare/pom.xml
+++ b/spring-table-affermare/pom.xml
@@ -9,27 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jdbi-table-affermare</artifactId>
-
+    <artifactId>spring-table-affermare</artifactId>
 
     <dependencies>
-
         <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-java</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-jdbi</artifactId>
-            <version>${dropwizard.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>3.2.3.RELEASE</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -39,6 +26,7 @@
         </dependency>
 
     </dependencies>
+
 
 
 </project>
